package com.ecodrive.app.ui.mainframe

enum class FooterTab {
    NONE,
    HOME,
    ADD,
    PREDICT,
    CONFIG
}
